# solana-todo

./: Anchor.toml  README.md  package.json
app/: package.json  tsconfig.json
app/constants/: idl.ts  index.ts  my_program.json
app/hooks/: todo.ts  useTodo.ts
app/interface/: phantom-wallet.ts  todoInterface.ts
app/pages/: _app.tsx  index.tsx
app/pages/todo/: index.tsx
app/styles/: globals.css
app/utils/: index.ts  provider.ts
programs/solana-todolist/: Cargo.toml
programs/solana-todolist/src/: constant.rs  error.rs  lib.rs  model.rs  state.rs
programs/token-contract/: Cargo.toml
programs/token-contract/src/: ata.rs  lib.rs
tests/: solana-todolist.ts  token-contract.ts
